# rules_vm

./: .gitignore  README.md  WORKSPACE.bazel
hello_world/: BUILD.bazel
