# Copyright 2024 Cezary Bartoszuk
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

build_test(
    name = "build_test",
    targets = [
        ":hello_world",
        ":hello_world_linux_x86_64_tar",
    ],
)

cc_binary(
    name = "hello_world",
    srcs = ["main.c"],
    features = ["no_libstdcxx"],
)

platform_transition_filegroup(
    name = "hello_world_linux_x86_64",
    srcs = [":hello_world"],
    target_platform = "@toolchains_llvm//platforms:linux-x86_64",
)

pkg_tar(
    name = "hello_world_linux_x86_64_tar",
    srcs = [":hello_world_linux_x86_64"],
    include_runfiles = True,
    strip_prefix = "/",
)